-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.9.2
-
Windows 10
MSVC
-
-
e3a0fe71e4ac34f805a03ccd81e09b4e3fb35a78 (qt-creator/qt-creator/4.12)
Qt Creator with CMake and MSVC does not work out of the box.
The issue is that CMake calls 'jom', but jom.exe is not in the PATH.
One solution is to change CMAKE_MAKE_PROGRAM from jom to C:\Qt\Tools\QtCreator\bin\jom.exe. This works for small projects, but for big/nested projects I still have errors about not finding jom (tested by building KDE GammaRay).
The best temporary solution so far is to add C:\Qt\Tools\QtCreator\bin in PATH.
This issue does not seems to be new, I have found 2-year-old forum posts complaining about this.
- is duplicated by
-
QTBUG-83454 A CMake project failed to be configured in Qt Creator
-
- Closed
-
-
QTCREATORBUG-23883
CMake cl.exe -- broken on Windows 10 because simple test program could not be build
-
- Withdrawn
-
- relates to
-
QTBUG-58252
Distribute CMake tools as part of the QtSDK
-
- Closed
-
- resulted in
-
QTCREATORBUG-23650
Let Qt Creator automatically pick up Ninja from SDK
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-22645 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 297390,4 | CMake: fixup env if jom is missing | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |